fix: Adjust font gap

--- a/web/css/repairmaintenance.css
+++ b/web/css/repairmaintenance.css
@@ -197,20 +197,23 @@
     width: 50%;
 }
 
-.review-card h2 {
+/* .review-card h2 {
     margin-bottom: 10px;
-}
+} */
 
 
 .stars {
     color: var(--warm-golden-accent);
     letter-spacing: 2px;
-    margin-bottom: 12px;
+    /* margin-bottom: 12px; */
 }
 
-.review-card p {
-    line-height: 1.75;
-    margin-bottom: 20px;
+.review-card {
+    /* line-height: 1.75; */
+    /* margin-bottom: 20px; */
+    display: flex;
+    flex-direction: column;
+    gap: var(--list-title-paragraph);
 }
 
 .review-user {
@@ -221,7 +224,7 @@
 }
 
 .review-user img {
-    width: 6%;
+    /* width: 6%; */
     height: 40px;
     border-radius: 200px;
     object-fit: cover;
